docs/7.56/md/abennews-40.md
  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 4.xx](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-4.htm) → 

News for Release 4.0

Changes were made in the following areas as part of development for SAP Basis Releases 4.0 and 4.5:

-   [Catchable Runtime Errors in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-sysexc.htm)
-   [Bit Operations and Bit Comparisons in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-bitops.htm)
-   [Data Types in ABAP Dictionary in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-dictionary-types.htm)
-   [Editing Large Datasets in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-performance.htm)
-   [Extended Concept for Field Symbols in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-assign.htm)
-   [Internal Tables in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-keytab.htm)
-   [Internal Tables and Extracts in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-itab-more.htm)
-   [Runtime Analysis in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-se30.htm)
-   [ABAP SQL in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-abap_sql.htm)
-   [RFC, Remote Function Call in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-rfc.htm)
-   [Selection Screens in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-selscreen.htm)
-   [Logical Databases in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-ldb.htm)
-   [Time Stamps in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-timestamp.htm)
-   [Further Changes in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-other-40ab.htm)

Earlier Changes in ABAP:

[News for Release 3.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-30.htm)
[Changes Before Release 3.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-21.htm)

Continue
[Catchable Runtime Errors in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-sysexc.htm)
[Bit Operations and Bit Comparisons in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-bitops.htm)
[Data Types in ABAP Dictionary in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-dictionary-types.htm)
[Editing Large Datasets in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-performance.htm)
[Extended Concept for Field Symbols in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-assign.htm)
[Internal Tables in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-keytab.htm)
[Internal Tables and Extracts in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-itab-more.htm)
[Runtime Analysis in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-se30.htm)
[ABAP SQL in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-abap_sql.htm)
[RFC, Remote Function Call in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-rfc.htm)
[Selection Screens in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-selscreen.htm)
[Logical Databases in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-ldb.htm)
[Time Stamps in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-timestamp.htm)
[Further Changes in Release 4.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40-other-40ab.htm)